<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    tools:context="com.github.alexvishneuski.androidmainclasses.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/log_in_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="10pt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_in_linear_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:text="@string/log_in"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name_for_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:hint="@string/phone_email_or_username"/>

        <EditText
            android:id="@+id/input_password_for_login_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:hint="@string/password"/>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:text="@string/log_in"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="10pt"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_linear_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:text="@string/new_to_app"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_full_name_for_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:hint="@string/full_name"/>

        <EditText
            android:id="@+id/input_email_for_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/input_password_for_sign_up_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:gravity="center_horizontal"
            android:hint="@string/password"/>


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:text="@string/sign_up"/>
    </LinearLayout>


</LinearLayout>